--- a/web/css/bigdataCont.css
+++ b/web/css/bigdataCont.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 
-.chart-right > p > span {font-size: 0.867em;color: #7f7f7f;}
-.chart-area.cont2::before {content: "";width: 115px;height: 400px;display: block;position: absolute;background: #7053d7;z-index: 0;}
+.chart-area.cont2::before {content: "";width: 115px;height: 400px;display: block;position: absolute;background: #7053d7;z-index: 0;border-top-left-radius: 22px;/* border-top-right-radius: 22px; *//* border-bottom-right-radius: 22px; */border-bottom-left-radius: 22px;}
 /* 기업활용 참여현황 */
 .main_visual {height:356px; min-width:1240px; background: url(../../img/common/bg.png) #2291e4 no-repeat; background-position-x: center;}
 .main_visual > .col_width {position:relative; height:100%; overflow: hidden;}
@@ -32,7 +31,7 @@
 
 
 /* 기업활용 참여현황 - 지역별 탭 콘텐츠 */
-.present_box .statePresent_data .tcs_White {color: #fff;background: linear-gradient(45deg, #6f45cd, #5a26cf);color: #fff;font-weight: 400;height: 46px;line-height: 44px;border-radius: 15px;text-align: left;font-size: 1.467em;padding: 0;width: 200px;text-align: center;display: inline-block;}
+.present_box .statePresent_data .tcs_White {color: #fff;background: linear-gradient(45deg, #6f45cd, #5a26cf);color: #fff;font-weight: 400;height: 46px;line-height: 44px;border-radius: 15px;text-align: left;font-size: 1.333em;padding: 0;width: 200px;text-align: center;display: inline-block;}
 .present_box .statePresent_data .tcs_White button:hover {background: linear-gradient(45deg, #2291e4, #5a26cf);}
 .present_box .statePresent_data .tcs_White img {/* float: left; *//* position: absolute; *//* top: 272px; *//* left: 96px; */width: 16px;margin-right: 12px;margin-top: 7px;}
 
@@ -98,10 +97,10 @@
 
 /* 기업활용 참여현황 - 업종별 탭 콘텐츠 */
 .jobCon_list {overflow:hidden;width: 100%;margin: 0 auto 0;/* border-top:2px solid #40454b; */}
-.jobCon_list li {float:left;width: calc(100% / 3);height: 50px;padding:0 20px;line-height:45px;color:#333;font-size:13px;/* border-right:1px solid #c6c6c6; */border-bottom:1px solid #c6c6c6;}
+.jobCon_list li {float:left;width: calc(100% / 3);height: 50px;padding:0 20px;line-height:45px;color:#333;border-bottom:1px solid #c6c6c6;letter-spacing: -0.05em;}
 .jobCon_list li:nth-child(3n-1) {border-right: 1px solid #c6c6c6;border-left: 1px solid #c6c6c6;}
 .jobCon_list li b {float:right; color:#7053d7; letter-spacing:-1px;}
-.jobCon_list li i {display:inline-block; margin:0 10px 0 0;}
+.jobCon_list li i {display:inline-block;margin: 0 5px 0 0;}
 
 
 
@@ -109,25 +108,26 @@
 /* 분야별 훈련과정 설계환황 콘텐츠 */
 .col_width {width: 100%;}
 .recruit_today {border: 0;}
-.tit_circleSummary {height: 60px;line-height: 60px;text-indent: 20px;color:#fff;font-size:30px;background: #0e76bc;}
+.tit_circleSummary {height: 60px;line-height: 60px;text-indent: 20px;color:#fff;font-size: 1.600em;background: #0e76bc;font-weight: 500;border-top-left-radius: 22px;border-top-right-radius: 22px;/* border-bottom-right-radius: 22px; *//* border-bottom-left-radius: 22px; */}
 .circle_summary {position:relative;padding:40px 30px;background: transparent;text-align:center;width: calc(100% - 100px);margin: auto;}
-.circle_summary .all_count {position:absolute;top: -47px;right:40px;display:inline-block;font-size:20px;color:#fff;text-align:right;}
-.circle_summary .all_count b {display:inline-block; margin:-6px 6px 0; font-size:35px; color:#fff568; vertical-align:middle; font-family:'NGothic';}
+.circle_summary .all_count {position:absolute;top: -42px;right: -20px;display: block;font-size: 1.200em;color:#fff;line-height: 1.4em;}
+.circle_summary .all_count b {display: inline-flex;margin: 0;font-weight: 600;color: #fee849;line-height: 1.4em;letter-spacing: -0.03em;padding: 0 5px;}
 .circle_summary .txt_guide {padding:15px 0 0; height:20px; line-height:20px; text-align:center; display:none; color:#333;}
 .circle_summary .txt_guide:before {content:'\e97b'; font-family:'xeicon'; margin:-2px 5px 0 0; padding:3px 0 0 3px; line-height:16px; vertical-align:middle; font-size:16px; overflow:hidden; display:inline-block; width:20px; height:20px; height:20px; border-radius:50px; color:#fff; background:#008ae7; box-sizing:border-box;}
-.circle_summary li .circle_box {position:relative; display:block; height:148px; margin:30px 10px 40px; padding:11px 0 30px; letter-spacing:-1px; font-size:16px;}
-.circle_summary li .circle_box span {/* display:block; *//* padding:0 13px 0 0; *//* width:131px; *//* height:96px; *//* text-align:center; *//* background:url(../education/img/bg_folderMain.png) no-repeat 50% 50%; */}
-.circle_summary li .circle_box span b {display:block;height:100%;width:100%;padding:32px 0 0;font-size:30px;/* color:#fff; */text-align:center;box-sizing:border-box;}
-.circle_summary li .circle_box i {position:absolute; bottom:0; left:-40px; width:201px; color:#333; font-size:16px; white-space:nowrap; letter-spacing:-1px;}
+.circle_summary li .circle_box {position:relative;display: flex;height: 200px;width: calc(100% - 15px);margin: 10px 10px;padding: 20px 0;flex-direction: column;align-items: center;justify-content: space-between;border: 1px solid #c3c3c3;border-radius: 20px;box-sizing: border-box;transition: all 0.2s;}
+.circle_summary li .circle_box:hover,
+.circle_summary li .circle_box:focus {border-color: #0e76bc;box-shadow: rgba(14, 118, 188, 0.2) 0px 0px 15px;}
+.circle_summary li .circle_box strong {display:block;width:100%;font-weight: 600;font-size: 2.000em;height: 50px;line-height: 50px;box-sizing:border-box;color: #000000;/* background: #0e76bc; *//* border-radius: 20px; */letter-spacing: -0.03em;}
+.circle_summary li .circle_box i {display: flex;color:#333;font-size: 1em;flex-direction: column;align-items: center;height: 110px;justify-content: space-between;letter-spacing: -0.03em;padding: 0 20px;line-height: 1.2em;}
 
 .circle_summary .bx-wrapper .bx-prev {left:-50px; background:url(../education/img/controller02.png) no-repeat 0 0;}
 .circle_summary .bx-wrapper .bx-next {right:-50px; background:url(../education/img/controller02.png) no-repeat 0 -35px}
 .circle_summary .bx-wrapper .bx-controls-direction a {margin-top:-25px; width:22px; height:35px; color:#333; opacity:1 !important;}
-.circle_summary .bx-wrapper .bx-pager {position:relative; padding-top:0;}
+.circle_summary .bx-wrapper .bx-pager {position:relative;top: 0;}
 .circle_summary .bx-wrapper .bx-pager.bx-default-pager a {background:none; width:14px; height:14px; border:3px solid #949291; display:inline-block; -webkit-transition:all .3s ease; -moz-transition:all .3s ease; transition:all .3s ease;}
 .circle_summary .bx-wrapper .bx-pager.bx-default-pager a.active {border-color:#33ccff; width:33px; background:#33ccff;}
 
-.circle_box > i::before {content:'';display:block;width:100%;height: 60px;background-size: 250px !important;background-position: center left 32px !important;}
+.circle_box > i::before {content:'';display:block;width: 52px;height: 70px;background-size: 250px !important;background-position: center left !important;}
 .icon01::before {background:url(../img/common/Icon01.png) no-repeat 28px 2px;}
 .icon02::before {background:url(../img/common/Icon02.png) no-repeat 28px 2px;}
 .icon03::before {background:url(../img/common/Icon03.png) no-repeat 28px 2px;}
