--- a/web/css/main.css
+++ b/web/css/main.css
@@ -313,9 +313,10 @@
 .integrated-main .chart-wrap {display: flex;justify-content: space-between;align-items: center;}
 .integrated-main .sect-03-post .sect-guide-tit::after {content: "";width:35px;height:35px;display: inline-block;background-image: url(../img/main/icon_data.png);background-position: center;vertical-align: bottom;margin-left: 10px;}
 .integrated-main .sect-03-post .sect-guide-titt::after {content: "";width: 40px;height: 40px;display: inline-block;background-image: url(../img/icon_calendar.png);background-position: center;vertical-align: bottom;margin-left: 10px;}
-.chart-area {width: 850px;height: 400px;border-radius: 22px;box-shadow: rgba(0, 0, 0, 0.05) 1px 1px 40px 10px;position: relative;z-index: 5;background-color: #fff;overflow: hidden;}
-.chart-right > p {text-align: right;font-size: 1.200em;color: #0e76bc;margin-bottom: 20px;line-height: 30px;letter-spacing: -0.03em;position: absolute;right: 0;top: -15px;transform: translate(0, -100%);}
-.chart-right > p::before {content: "";width: 10px;height: 10px;background: #0e76bc;display: inline-flex;border-radius: 50%;margin-right: 6px;vertical-align: 2px;}
+.chart-area {width: 850px;height: 400px;border-radius: 22px;box-shadow: rgba(0, 0, 0, 0.05) 1px 1px 40px 10px;position: relative;z-index: 5;background-color: #fff;/* overflow: hidden; */}
+.chart-area.cont2 > p {text-align: right;font-size: 1.200em;color: #0e76bc;margin-bottom: 20px;line-height: 30px;letter-spacing: -0.03em;position: absolute;right: 0;top: -15px;transform: translate(0, -100%);}
+.chart-area.cont2 > p::before {content: "";width: 10px;height: 10px;background: #0e76bc;display: inline-flex;border-radius: 50%;margin-right: 6px;vertical-align: 2px;}
+.chart-area.cont2 > p > span {font-size: 0.867em;color: #7f7f7f;}
 .chart-right {position: relative;}
 
 .chart-wrap > ul > li {font-size: 1.467em;line-height: 70px;letter-spacing: -0.03em;padding-left: 15px;position: relative;}
@@ -334,6 +335,9 @@
 
 
 [data-tab-index], [data-top-nav] {display: none;width: 1240px;}
+.ncs-gnb-bar a + ul > li > a {font-size: 1em !important;font-weight: 400 !important;height: 50px !important;display: inline-flex !important;padding: 0 10px !important;align-items: center;justify-content: center;}
+.top_menu > ul > li > ul {top: 61px;left: 50%;transform: translateX(-50%);width:1240px;}
+.top_depth2_bg {top: 61px;}
 
 @media(max-width: 1536px){
     .blind-wrap .calendar-area::before {background-size: 55%;margin-left: 40px;top: -25px;}
